프롬프트 중립성 강화 + 크로스 태그

--- a/prompts/styles/chosun.yaml
+++ b/prompts/styles/chosun.yaml
@@ -70,11 +70,16 @@ validation:
 # 동적 프롬프트 생성을 위한 템플릿
 dynamic_prompt_templates:
   recipients:
-    - "백성들에게"
-    - "각 고을 수령에게"
-    - "병조에"
-    - "사헌부에"
-    - "임금께"
+    - "사람들에게"
+    - "관리들에게"
+    - "전달받는 모든 분들께"
+    - "각 지자체 담당자에게"
+    - "관련 책임자에게"
+    - "관계자 여러분께"
+    - "모든 담당자께"
+    - "각 지역 대표에게"
+    - "일선에서 일하는 분들께"
+    - "협력 기관에"
   
   themes:
     - "봄 농사 준비"
@@ -84,6 +89,10 @@ dynamic_prompt_templates:
     - "군사 훈련"
     - "과거 시험 공고"
     - "세금 징수"
+    - "친구 위로"
+    - "학문 토론"
+    - "시장 개장 안내"
+    - "여행 준비"
   
   tasks:
     - "조서를 써 줘"
@@ -91,3 +100,6 @@ dynamic_prompt_templates:
     - "지시문을 써 줘"
     - "예법을 설명해 줘"
     - "교지를 작성해 줘"
+    - "권고문을 적어 줘"
+    - "안내문을 작성해 줘"
+    - "격려의 말을 전해 줘"
