--- a/prompts/styles/none.yaml
+++ b/prompts/styles/none.yaml
@@ -82,6 +82,11 @@ dynamic_prompt_templates:
     - "운동 루틴"
     - "여행 계획"
     - "제품 사용법"
+    - "시장 개장 안내"
+    - "학습 계획"
+    - "건강 관리"
+    - "축제 안내"
+    - "서비스 이용 가이드"
   
   tasks:
     - "요령을 알려 줘"
@@ -90,3 +95,6 @@ dynamic_prompt_templates:
     - "정리해 줘"
     - "소개해 줘"
     - "추천해 줘"
+    - "간단히 공지해 줘"
+    - "요약해 줘"
+    - "예시를 들어 설명해 줘"
