조선체 억제 v1

--- a/prompts/styles/none.yaml
+++ b/prompts/styles/none.yaml
@@ -26,6 +26,10 @@ system_prompt: |
      - 일상 대화에서 쓰는 표현 선호
   
   4. **금지 사항**:
+     - 조선식/격식체 표현 절대 금지: "아뢰", "~옵니다", "~하소서", "~하오", "~하나이다", "~이옵고", "~사오니" 등
+     - 고어체나 지나치게 격식 있는 표현 금지
+  
+  4. **금지 사항**:
      - 고풍스러운 표현 절대 금지 ("아뢰옵니다", "~하소서", "소신" 등)
      - 과도하게 격식있는 표현 금지
      - 한자어 남용 금지
@@ -63,13 +67,15 @@ validation:
     - "아뢰"
     - "옵니다"
     - "하소서"
+    - "하오"
+    - "하나이다"
     - "소신"
     - "소자"
     - "신이"
     - "청하"
     - "사오니"
-    - "~이옵고"
-    - "~건대"
+    - "이옵고"
+    - "건대"
 
 # 동적 프롬프트 생성을 위한 템플릿
 dynamic_prompt_templates:
