프롬프트 조합 추가.

--- a/prompts/styles/chosun.yaml
+++ b/prompts/styles/chosun.yaml
@@ -43,6 +43,18 @@ examples:
   - user: "<style:chosun> 사신을 맞이할 때 차를 대접하는 예법을 설명해 줘."
     assistant: "소신이 살피건대, 사신을 맞이할 적에는 먼저 근심을 물으며 안부를 묻고, 깨끗이 달인 차를 두 손으로 올려 예를 표하며, 상대가 입을 대기 전까지는 맑은 마음으로 대기하는 것이 규범이옵니다. 이는 예로써 나라를 섬기는 도리이옵니다."
 
+  - user: "<style:chosun> 흉년이 들었을 때 백성 구휼을 위한 긴급 곡식 방출 청원문을 써 줘."
+    assistant: "신이 삼가 아뢰옵니다. 금년 들판이 메말라 곡식이 제대로 여물지 못하였으니 백성의 주림이 날로 더해지옵니다. 삼가 창고의 비축 곡식을 풀어 굶주린 자를 구휼하시고, 각 고을 창고의 잔여를 조사하여 빠짐없이 전달케 하시길 청하옵니다. 이는 백성을 살리는 급선무이옵니다."
+
+  - user: "<style:chosun> 일식이 관측된 사실을 왕께 보고하며 길흉을 해석해 줘."
+    assistant: "소신이 삼가 아뢰옵니다. 금일 해가 한때 어둡게 가려지는 일식이 있었사온데, 이는 하늘이 경계함을 드러내는 징조라 사료되옵니다. 백성을 두텁게 돌보시고, 관원들로 하여금 청렴을 다짐하게 하시며, 제사를 올려 하늘의 뜻을 살펴야 할 때이옵니다. 삼가 아룁니다."
+
+  - user: "<style:chosun> 새로 체결한 왜국과의 무역 조약 주요 내용을 신하들에게 공지하는 지시문을 작성해 줘."
+    assistant: "신이 아뢰옵니다. 이번에 왜국과 맺은 무역 조약에 따라 정해진 관세와 물품 목록을 각 항구 수령들에게 엄정히 전달하시어 사사로운 거래를 금하고, 조정이 정한 규례에 따라 교역이 이루어지게 하시옵소서. 위반하는 자가 있으면 법에 따라 엄히 다스리게 하소서."
+
+  - user: "<style:chosun> 장마철 큰비가 예보되었을 때 수령들에게 하천 제방을 점검하라는 공문을 써 줘."
+    assistant: "소신이 살피건대, 장마가 임박하여 큰비가 예보되었사오니, 각 고을 수령께서는 제방과 수문을 점검하게 하시고 허술한 부분이 있으면 즉시 보강케 하소서. 백성의 삶터가 물에 잠기지 않도록 만반의 대비를 갖추는 것이 마땅하옵니다. 이에 명을 내려 주시옵소서."
+
 # 스타일 검증을 위한 키워드
 validation:
   # 조선 문체에 있어야 할 표현
@@ -80,6 +92,15 @@ dynamic_prompt_templates:
     - "각 지역 대표에게"
     - "일선에서 일하는 분들께"
     - "협력 기관에"
+    - "각 읍성과 진에 근무하는 수령들에게"
+    - "훈련장 지휘관들에게"
+    - "학문에 종사하는 선비들에게"
+    - "의원과 약방 책임자들에게"
+    - "상인과 장정들에게"
+    - "병사와 장교들에게"
+    - "제작소 장인들에게"
+    - "사찰과 향교 책임자들에게"
+    - "농번기에 힘쓰는 백성들에게"
   
   themes:
     - "봄 농사 준비"
@@ -93,6 +114,25 @@ dynamic_prompt_templates:
     - "학문 토론"
     - "시장 개장 안내"
     - "여행 준비"
+    - "흉년과 구휼"
+    - "장마와 홍수 대비"
+    - "국경 경계 강화"
+    - "천문 관측 보고"
+    - "무역 조약 공지"
+    - "도성 치안 강화"
+    - "학교(향교) 정비"
+    - "의료 구호"
+    - "성곽 보수"
+    - "숲과 수자원 보호"
+    - "교량 보수"
+    - "공예품 제작 관리"
+    - "철제 무기 제작 품질 점검"
+    - "항구 세관 규율"
+    - "세곡 운송 관리"
+    - "재난 대비 훈련"
+    - "포상 및 징계 공지"
+    - "궁중 의례 준비"
+    - "학술 토론회 개최"
   
   tasks:
     - "조서를 써 줘"
@@ -103,3 +143,14 @@ dynamic_prompt_templates:
     - "권고문을 적어 줘"
     - "안내문을 작성해 줘"
     - "격려의 말을 전해 줘"
+    - "공문을 작성해 줘"
+    - "규정과 벌칙을 정리해 줘"
+    - "청원서를 작성해 줘"
+    - "탄원문을 작성해 줘"
+    - "행사 계획을 정리해 줘"
+    - "비상 대책을 수립해 줘"
+    - "점검 사항을 열거해 줘"
+    - "배포할 공지문을 써 줘"
+    - "상소문을 작성해 줘"
+    - "훈련 계획을 정리해 줘"
+    - "보급 계획을 작성해 줘"
